--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -218,11 +218,11 @@
                         </div>
                         <div class="col-6" style="text-align:initial">
                             {% if obra.conclution%}
-                                <h4>La obra se termino</h4>
+                                <h4>La obra se terminó</h4>
                                 
                                 <h6>{{ obra.conclution|date:"d-m-Y" }}</h6>
                             {%else%}
-                                <h6>No se a terminado</h6>
+                                <h6>No se ha terminado</h6>
                             {%endif%}
                         </div>
                        
