--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -130,7 +130,7 @@ a:hover .afot {
             <li><a href="{%url 'logout'%}">Salir</a></li>
             {%else%}
       
-              <li><a href="{%url 'login'%}">Entar</a></li>
+              <li><a href="{%url 'login'%}">Entrar</a></li>
               <li><a href="{%url 'register'%}">Registrarte</a></li>
           
             {%endif%}
