--- a/aquiseconstruye/work/templates/card_obra.html
+++ b/aquiseconstruye/work/templates/card_obra.html
@@ -103,7 +103,7 @@
         {% if obras.image%}
         <img  class="card-image" src='{{obras.image.url}}' class="rounded">
         {%else%}
-        <img  class="card-image" src='https://i.ibb.co/tmytdby/35557.jpg' class="rounded">
+        <img  class="card-image" src='https://i.ibb.co/6PHyf5B/FOTO-NO-DISPONIBLE.jpg' class="rounded">
         {%endif%}
           
       </div>
